solving this issue: https://stackoverflow.com/questions/37112218/css3-100vh-not-constant-in-mobile-browser
safari / chrome on OS show toolbar, messes up 100vh calculation

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,7 +1,7 @@
 .HomePage {
   background-color: #EE6055;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -87,8 +87,12 @@
   .Button {
     padding: 10px;
   }
-  
+
   .Row {
     height: 50%;
+    padding-top: 100px;
+  }
+  .HomePage {
+    height: calc(100vh - 100px);
   }
 }
